@@ -4,6 +4,10 @@ CHANGE LOG
 
 2012-12-07 Thomas Holder <thomas.holder@schrodinger.com>
 
+	* command line (Tk GUI) history improvements
+
+	* add angles to the Movie-Program-SceneLoop menu
+
 	* Fixed fab hydro argument
 
 2012-11-12 Thomas Holder <thomas.holder@schrodinger.com>
